# PYDeepLearning

./: LICENSE  README.md  check_ttft.py  sentence_transformers.ipynb  streaming_metrics.json  test.ipynb  vLLM_script_test.py
agent-platform/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent-platform/agentforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-platform/agents/: __init__.py  base_agent.py  customer_support.yaml  deep_research.yaml  email_agent.py  email_automator.yaml  job_agent.py  job_hunter.yaml  research_agent.py  support_agent.py
agent-platform/api/: server.py
agent-platform/api/routes/: __init__.py  agents.py  multi_agent.py  workflows.py
agent-platform/api/ws/: __init__.py  stream.py
agent-platform/configs/: agent.yaml
agent-platform/configs/workflows/: deep_research.yaml  (+1 more)
agent-platform/core/: __init__.py  agent.py  communication.py  executor.py  memory.py  orchestrator.py  planner.py  shared_memory.py  streaming.py  workflow.py
agent-platform/llm/: __init__.py  anthropic_provider.py  base.py  custom_endpoint.py  gemini_provider.py  ollama_provider.py  openai_provider.py  vllm_provider.py
agent-platform/tools/: __init__.py  email.py  file_tools.py  http_tools.py  job_tools.py  multi_agent.py  playwright_scraper.py  registry.py  scraper.py  web_search.py
agent-platform/ui/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
agent-platform/workspace/: ai_ml_jobs_product_companies.md  ai_ml_jobs_report.md  transformer.py  transformer_implementation.py
(+103 files in other folders)
